# embedded-python-threads

./: LICENSE  README.md
embedded-python-threads/: CMakeLists.txt  main.cpp
